--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
